--- a/package.json
+++ b/package.json
@@ -1,9 +1,19 @@
 {
-  "name": "@twofriedeggs/mockery",
-  "version": "0.0.1",
-  "description": "",
+  "name": "mockery",
+  "version": "0.1.0-BETA",
+  "description": "Mockery - an open source service to mock your upstreams. Used during performance testing, development and QA to dynamically simulate a response and test the app behaviour.",
+  "main": "",
   "scripts": {
-    "start": "nodemon src/server.js"
+    "dev": "next dev -p 8080",
+    "prebuild": "rm -rf .next",
+    "build": "next build",
+    "start": "next start -p 8080",
+    "browserslist:update-db": "npx browserslist@latest --update-db",
+    "browserslist:list": "npx browserslist --config='package.json'"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/twofriedeggs/mockery.git"
   },
   "keywords": [],
   "author": {
@@ -11,12 +21,26 @@
     "email": "spa.simone@gmail.com",
     "url": "https://www.linkedin.com/in/simonespaccarotella"
   },
-  "license": "GPL-3.0-or-later",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/twofriedeggs/mockery/issues"
+  },
+  "homepage": "https://github.com/twofriedeggs/mockery#readme",
   "dependencies": {
-    "express": "^4.17.1",
-    "path-to-regexp": "^6.1.0"
+    "next": "^10.1.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
-  }
+    "@types/node": "^14.14.37",
+    "@types/react": "^17.0.3",
+    "typescript": "^4.2.4"
+  },
+  "browserslist": [
+    "last 2 versions",
+    "ie >= 11",
+    "Firefox ESR",
+    "current node",
+    "not dead"
+  ]
 }
