--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/twofriedeggs/mockery#readme",
   "dependencies": {
     "next": "^10.2.2",
+    "path-to-regexp": "^6.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
