--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/twofriedeggs/mockery#readme",
   "dependencies": {
+    "mongodb": "^3.6.9",
     "next": "^10.2.2",
     "path-to-regexp": "^6.2.0",
     "react": "^17.0.2",
