--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
   "compilerOptions": {
-    // https://www.typescriptlang.org/tsconfig#baseUrl
     "baseUrl": "./",
     "target": "es5",
     "lib": [
@@ -18,8 +17,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
-    "downlevelIteration": true
+    "jsx": "preserve"
   },
   "include": [
     "next-env.d.ts",
