--- a/package.json
+++ b/package.json
@@ -32,16 +32,16 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
-  "browserslist": [
-    "last 2 versions",
-    "current node",
-    "not dead"
-  ],
   "devDependencies": {
     "@types/node": "^16.10.3",
     "@types/react": "^17.0.27",
     "eslint": "^7.32.0",
     "eslint-config-next": "^11.1.2",
     "typescript": "^4.4.3"
-  }
+  },
+  "browserslist": [
+    "last 2 major versions",
+    "current node",
+    "not dead"
+  ]
 }
