--- a/package.json
+++ b/package.json
@@ -27,18 +27,20 @@
   },
   "homepage": "https://github.com/twofriedeggs/mockery#readme",
   "dependencies": {
-    "next": "^10.2.2",
+    "next": "^11.1.2",
     "path-to-regexp": "^6.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@types/node": "^15.6.0",
-    "@types/react": "^17.0.6",
-    "typescript": "^4.2.4"
+    "@types/node": "^16.10.3",
+    "@types/react": "^17.0.27",
+    "eslint": "^7.32.0",
+    "eslint-config-next": "^11.1.2",
+    "typescript": "^4.4.3"
   },
   "browserslist": [
-    "last 2 versions",
+    "last 2 major versions",
     "current node",
     "not dead"
   ]
