--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "",
   "scripts": {
     "dev": "next dev -p 8080",
-    "prebuild": "rm -rf .next",
     "build": "next build",
     "start": "next start -p 8080",
+    "lint": "next lint",
     "browserslist:update-db": "npx browserslist@latest --update-db",
-    "browserslist:list": "npx browserslist --config='package.json'"
+    "browserslist:list": "npx browserslist@latest --config='package.json'"
   },
   "repository": {
     "type": "git",
@@ -27,17 +27,17 @@
   },
   "homepage": "https://github.com/twofriedeggs/mockery#readme",
   "dependencies": {
-    "next": "^11.1.2",
-    "path-to-regexp": "^6.2.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "next": "^12.1.6",
+    "path-to-regexp": "^6.2.1",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0"
   },
   "devDependencies": {
-    "@types/node": "^16.10.3",
-    "@types/react": "^17.0.27",
-    "eslint": "^7.32.0",
-    "eslint-config-next": "^11.1.2",
-    "typescript": "^4.4.3"
+    "@types/node": "^17.0.35",
+    "@types/react": "^18.0.9",
+    "eslint": "^8.16.0",
+    "eslint-config-next": "^12.1.6",
+    "typescript": "^4.7.2"
   },
   "browserslist": [
     "last 2 major versions",
